--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,46 @@
  * Copyright 2013-2020 Start Bootstrap
  * Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-small-business/blob/master/LICENSE)
  */
+
+
 body {
-  padding-top: 56px;
+  padding-top: 70px;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  
+}
+
+main {
+  flex: 1;
+}
+
+
+#footer {
+
+  background-color: teal;
+  color: white;
+  min-height: 100px;
+  border-width: 10px 0px 0px 0px;
+  border-style: solid;
+  border-color: orange;
+
+}
+
+#navi{
+  border-width: 0px 0px 10px 0px;
+  border-style: solid;
+  border-color: orange;
+  background-color: teal;
+}
+
+#icons{
+ 
+  display:inline; 
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+  text-align: center;
+  
 }
